assets/stylesheets/bootstrap.scss
---
---

$enable-negative-margins: true;

$body-bg: #fefef4;

$code-color: #212529;

$container-max-widths: (
  sm: 540px,
  md: 720px,
  lg: 960px,
  xl: 1140px,
  xxl: 1320px,
  xxxl: 1920px
);

$font-family-sans-serif: 'Hanken Grotesk', sans-serif;

$card-border-radius: 0;
$card-border-color: transparent;

@import "bootstrap/bootstrap";

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 56px;
  font-size: 1.125rem;
  overflow-x: hidden;

  @include media-breakpoint-down(md) {
    font-size: 1rem;
  }
}

footer {
  height: 56px;
  line-height: 56px;
  overflow: hidden;
}

/*
 *  Layout
 */

#site-header {
  &.scrolled{
    background-color: $body-bg;
    transition: background-color 200ms linear;
  }
}

.pt-header {
  padding-top: 56px;
}

.sticky-top {
  top: 64px;
}

#toc {
  .nav-link {

    &.active {
      color: $body-color !important;
    }
  }
}

.timeline-segment {
  position: relative;
  border-right: thin solid $gray-400;
}

.timeline-segment::after {
  width: 12px;
  height: 12px;
  border-radius: 6px;
  background-color: $body-color;
  position: absolute;
  top: 12px;
  right: 0;
  margin-top: -6px;
  margin-right: -6px;
  content: ' ';
}

.ratio {
  img {
    object-fit: contain;
  }
}

.ratio-1x1 {
  @include media-breakpoint-up(md) {
    --bs-aspect-ratio: 62.5%; // 16x10
  }
}

.card {
  & > img {
    transition: all 0.2s ease-in-out 0s;
  }

  &:hover > img {
    transform: scale(1.2);
  }
}

.multiply {
  mix-blend-mode: multiply;
}

article {
  header {
    time {
      font-size: 1.125rem;

      @include media-breakpoint-down(md) {
        font-size: 1rem;
      }
    }
    h1 {
      font-size: 3.75rem;
      line-height: 1;

      @include media-breakpoint-down(md) {
        font-size: 2.25rem;
      }
    }

    h3 {
      font-size: 1.5rem;

      @include media-breakpoint-down(md) {
        font-size: 1.3125rem;
      }
    }
  }

  main {
    blockquote {
      border-radius: 0.375rem;
      margin: 24px 0;
      padding: 16px;
      background-color: #f3f1e5;

      p:last-child {
        margin-bottom: 0;
      }
    }

    figcaption {
      font-weight: bold;
    }

    h1 {
      margin: 96px 0 12px 0;
      font-size: 1.5rem;
      font-weight: bold;

      &:first-child {
        display: none;
      }

      @include media-breakpoint-down(md) {
        margin: 72px 0 8px 0;
        font-size: 1.3125rem;
      }
    }

    h2 {
      margin: 72px 0 12px 0;
      font-size: 1.3125rem;
      font-weight: bold;

      @include media-breakpoint-down(md) {
        margin: 60px 0 8px 0;
        font-size: 1.125rem;
      }
    }

    h3 {
      margin: 60px 0 12px 0;
      font-size: 1.125rem;
      font-weight: bold;

      @include media-breakpoint-down(md) {
        margin: 36px 0 8px 0;
        font-size: 1rem;
      }
    }

    img {
      margin: 24px 0;
      max-width: 100%;
      height: auto;
    }

    li {
      margin: 10px 0;
    }
  }
}

.prompt {
  display: block;
  background-color: #f3f1e5;
  margin: 24px 0;
  padding: 16px;
  border-radius: 0.375rem;
}
mark {
  padding: 0;
  color: #f92672;
  background-color: transparent;
}

.cheatsheet {
  font-size: 0.875rem;

  @media (min-width: 576px) {
    -webkit-column-count: 2;
       -moz-column-count: 2;
            column-count: 2;
  }

  @media (min-width: 992px) {
    -webkit-column-count: 3;
       -moz-column-count: 3;
            column-count: 3;
  }

  @media (min-width: 1400px) {
    -webkit-column-count: 4;
       -moz-column-count: 4;
            column-count: 4;
  }

  @media (min-width: 1800px) {
    -webkit-column-count: 5;
       -moz-column-count: 5;
            column-count: 5;
  }

  @media (min-width: 2200px) {
    -webkit-column-count: 6;
       -moz-column-count: 6;
            column-count: 6;
  }

  @media (min-width: 2600px) {
    -webkit-column-count: 7;
       -moz-column-count: 7;
            column-count: 7;
  }

  @media (min-width: 3000px) {
    -webkit-column-count: 8;
       -moz-column-count: 8;
            column-count: 8;
  }


  h1 { font-size: 1rem; font-weight: 700; }
  h2 { font-size: 0.875rem; font-weight: 700; }

  section,
  .footnotes {
    break-inside: avoid-column;
    border-radius: 0.375rem;
    margin: 0 0 16px 0;
    padding: 16px 16px 0.05px 16px;
    background-color: #f3f1e5;
    background-position: top -8px right 14px;
    background-size: 64px 64px;
    background-repeat: no-repeat;
    background-blend-mode: overlay;

    hr {
      border-top: 1px solid #333333;
    }

    ol, ul {
      padding-left: 16px;
    }

    p + ul {  
       margin-top: -1rem;
    }
  }
}

.figure {
  background-color: #f3f1e5;
}

.table-responsive {
  font-size: 1rem;

  @include media-breakpoint-down(md) {
    font-size: 0.875rem;
  }
}

code.language-plaintext {
  padding: 2px 6px;
  background-color: #f3f1e5;
  border-radius: 4px;
}

pre.highlight {
  position: relative;
  margin: 24px 0;
  padding: 24px;
  font-size: 1rem;
  border-radius: 0.375rem;
  background: #f3f1e5;

  @include media-breakpoint-down(md) {
    font-size: 0.875rem;
  }
}

pre.highlight > button {
  position: absolute;
  right: 16px;
  top: 16px;
  opacity: 0;
}

pre.highlight:hover > button {
  opacity: 1;
}

pre.highlight > button:active,
pre.highlight > button:focus {
  opacity: 1;
}

iframe { 
  width: 100%;
  aspect-ratio: 16 / 9;
}

.MathJax {
  overflow-x: scroll;
}

